Changelog
=========

4.0.2 - unreleased
------------------


4.0.1 - 2011-01-10
------------------

- Changed defaultLanguage behavior in I18NBaseObject to always report the
  parent's folder language even if it is neutral.
  [ggozad]

4.0 - 2010-11-25
----------------

- Fixed possible XSS security issue in the `translationbrowser_popup` caused
  by displaying unfiltered content from the `Description` string field as HTML.
  Issue reported by Andrew Nicholson.
  [hannosch]

- Protect against accidentally acquiring the `getTranslations` method from a
  parent object in `utils.generatedMutator`. Thanks to Matous Hora for the
  patch. This closes http://plone.org/products/linguaplone/issues/257.
  [hannosch]

4.0b1 - 2010-11-04
------------------

- Gracefully deal with multiple brains per `UID` in `translated_references`.
  [hannosch]

4.0a4 - 2010-10-06
------------------

- Avoid module global imports in our top-level ``__init__``. If you have
  accidentally imported any of the contents of the ``public`` module directly
  from ``Products.LinguaPlone``, you will need to adjust those to import from
  the ``public`` module instead. This closes
  http://plone.org/products/linguaplone/issues/253.
  [hannosch, ggozad, shh42]

4.0a3 - 2010-09-24
------------------

- Rewrote ``getTranslationReferences`` and ``getTranslationBackReferences``
  internals to avoid the catalog search API and make use of knowledge of its
  internals.
  [hannosch]

- In the TranslatableLanguageSelector only append a question mark, if there's
  a query string to append.
  [hannosch]

4.0a2 - 2010-09-08
------------------

- Make the ``set_language`` query string addition configurable via a class
  variable on the TranslatableLanguageSelector.
  [hannosch]

4.0a1 - 2010-07-28
------------------

- Added test for deleting canonical folders. Added minimum version requirement
  on Products.ATContentTypes 2.0.2 for the fix to
  http://plone.org/products/linguaplone/issues/241.
  [hannosch]
